potential mobile overflow fix

--- a/phonestyle.css
+++ b/phonestyle.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   flex-direction: column;
   overflow-x: hidden;
